# pokemon_az

./: .gitignore  CMakeLists.txt  CMakePresets.json  example.cpp  main.cpp  mcts_test.cpp  perf.data.old
.cache/clangd/index/: agent.hpp.54C1F61FFCB5F663.idx  base_stats.hpp.C536898EC236B56A.idx  example.cpp.8CBDB8C1F085019D.idx  gen1battle.hpp.6FBB64AE55B9191C.idx  gen1pokemon.hpp.424F6EDC07960251.idx  gen1side.hpp.83EC1F2D0F26E2B9.idx  generation.hpp.6FA8F7557AD055D7.idx  main.cpp.2DC7E8AC50598148.idx  mcts.hpp.21BDC1C4692A6EFA.idx  mcts_no_model.hpp.88B539D3F9760F19.idx  mcts_test.cpp.440CFC224E16188A.idx  model.cpp.82DA9B9B1F2CAF83.idx  model.hpp.98036BCD2C5A8513.idx  moves.hpp.64D735575DAFEAC4.idx  pkmn.h.586435EB0FC33352.idx  pkmndriver.cpp.AF1D02638B3DFC4E.idx  pkmndriver.hpp.8C0D735927C04182.idx  rangeview.hpp.255D9DAF61ACCFDA.idx  sample_team.hpp.3583118E0B7D9594.idx  species.hpp.DF057255E9AFB61F.idx  status.hpp.2338D5C848FFF1B3.idx  train.hpp.82498DC9CA8A0C9C.idx  types.hpp.81F9ECDD698E097C.idx
driver/: pkmndriver.cpp  pkmndriver.hpp
driver/src/: agent.hpp  generation.hpp  rangeview.hpp
driver/src/gen1/: gamestate.hpp  gen1battle.hpp  gen1pokemon.hpp  gen1side.hpp
driver/src/gen1/data/: base_stats.hpp  moves.hpp  species.hpp  status.hpp  types.hpp
driver/src/gen1/samplers/: sample_team.hpp
engine/: pkmn.h
pkmnaz/: gamestate.hpp  mcts.hpp  mcts_no_model.hpp  mcts_stack.hpp  model.hpp  train.hpp
showdown_az/: poke_env_study.py
